--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <span class="lettre">O</span>
         <span class="lettre">U</span>
         <span class="lettre">M</span>
-        <span class="lettre">D</span>
         <span class="lettre">J</span>
         <span class="lettre">A</span>
         <span class="lettre">T</span>
         <span class="lettre">I</span>
+        <span class="lettre">.</span>
         <span class="lettre">.</span>
         <span class="lettre"><i class="fas fa-utensils"></i></span>
     </div>
@@ -67,7 +67,7 @@
                 </ul>
             </section>
             <section class="restaurants">
-                <h2>Restaurants</h2>
+                <h2>Loumjati </h2>
                 <div class="restaurants_cards">
                     <article class="card">
                         <a href="./restaurants/la-palette-du-gout.html">
