--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                                 alt="la palette du goût">
                             <div class="card_content">
                                 <div class="card_txt">
-                                    <h3 class="card_title">La palette du goût</h3>
-                                    <p class="card_subtitle">Ménilmontant</p>
+                                    <h3 class="card_title">Délice Crémeux aux Dattes</h3>
+                                    <p class="card_subtitle"></p>
                                     <span class="new_btn">Nouveau</span>
                                 </div>
                             </div>
