--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         </header>
         <main>
             <div class="localisation-restaurants">
-                <i class="fa-solid fa-location-dot "></i>
-                <p>Paris,Belleville</p>
+               
+               
             </div>
             <div class="explorer">
                 <div>
-                    <h1>Réservez le menu qui vous convient</h1>
-                    <p>Découvrez des restaurants d'exception,Sélectionnés par nos soins</p>
+                    <h1>Réservez le goûter qui vous convient</h1>
+                    <p>Découvrez des gouter d'exception,Sélectionnés par nos soins</p>
                 </div>
-                <button class="btn">Explorez nos restaurants</button>
+                <button class="btn">Explorez nos goûters</button>
             </div>
             <section class="fonctionnement">
                 <h2>Fonctionnement</h2>
@@ -52,17 +52,17 @@
                     <li class="step">
                         <span class="step_number">1</span>
                         <i class="fa-solid fa-mobile-screen-button "></i>
-                        <h3 class="step_title">Choisissez un restaurant</h3>
+                        <h3 class="step_title">Choisissez un goûter</h3>
                     </li>
                     <li class="step">
                         <span class="step_number">2</span>
                         <i class="fa-solid fa-list-ul "></i>
-                        <h3 class="step_title">Composez votre menu</h3>
+                        <h3 class="step_title">Composez votre goûter</h3>
                     </li>
                     <li class="step">
                         <span class="step_number">3</span>
                         <i class="fa-solid fa-store"></i>
-                        <h3 class="step_title">Dégustez au restaurant</h3>
+                        <h3 class="step_title">Dégustez </h3>
                     </li>
                 </ul>
             </section>
@@ -76,8 +76,8 @@
                                 alt="la palette du goût">
                             <div class="card_content">
                                 <div class="card_txt">
-                                    <h3 class="card_title">Délice Crémeux aux Dattes</h3>
-                                    <p class="card_subtitle"></p>
+                                    <h3 class="card_title">Délice au Dattes</h3>
+                                    <p class="card_subtitle">Délice de dattes</p>
                                     <span class="new_btn">Nouveau</span>
                                 </div>
                             </div>
